--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "any-db": "^2.1.0",
     "any-db-mysql": "^2.1.2",
     "body-parser": "^1.12.0",
+    "csurf": "^1.7.0",
     "express": "^4.11.2",
     "express-handlebars": "^1.1.0",
     "express-session": "^1.10.3",
